--- a/app/view/index.hbs
+++ b/app/view/index.hbs
@@ -1,6 +1,10 @@
-<div class="entry">
-  <h1>{{title}}</h1>
-  <div class="body">
-    {{{body}}}
-  </div>
-</div>
+
+
+{{#if user}}
+<p>hello {{user}}</p>
+<A href="\auth\logout">login</a>
+
+{{else}}
+<a href="\auth\login">login</a>
+<a href="\auth\signup">signup</a>
+{{/if}}
