重构：把数据库移动到mongoose

--- a/app/view/url.hbs
+++ b/app/view/url.hbs
@@ -1,4 +1,4 @@
 <form action="/auth/url" method="post">
   url: <input type="text" name="url" /><br>
-  <input type="submit" value="注册" />
+  <input type="submit" value="绑定" />
 </form>
